force-app/main/default/objects/Account__c/Account__c.object-meta.xml
<CustomObject>
    <label>Account Document</label>
    <nameField>
        <displayFormat>Doc-{000000}</displayFormat>
        <label>Document Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Document</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>