force-app/main/default/objects/Account__c/fields/ContentDocumentId__c.field-meta.xml
<CustomField>
    <fullName>ContentDocumentId__c</fullName>
    <label>ContentDocumentId</label>
    <length>90</length>
    <type>Text</type>
</CustomField>