force-app/main/default/objects/Account__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document_Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AdharCard</fullName>
            </value>
            <value>
                <fullName>PanCard</fullName>
            </value>
            <value>
                <fullName>Salary Slip</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>